# split-paragraphs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  no_std_build.yml  test.yml
src/: lib.rs
tests/: tests.rs
