[package]
authors = ["Ľubomír Kurčák <lubomirkurcak@gmail.com>"]
name = "split-paragraphs"
description = "An iterator over the paragraphs of a string."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lubomirkurcak/split-paragraphs"
categories = [
    "parsing",
    "rust-patterns",
    "text-processing",
    "no-std",
]
