[package]
authors = ["Ľubomír Kurčák <lubomirkurcak@gmail.com>"]
name = "split-paragraphs"
description = "Iterator over paragraphs of a string."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lubomirkurcak/split-paragraphs"
categories = [
    "parsing",
    "rust-patterns",
    "text-processing",
    "no-std",
    "no-std::no-alloc",
]
keywords = ["paragraphs", "split", "iterator", "no-std", "no-alloc"]
